--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -21,6 +21,7 @@
                 font-size: 16px;
                 color: #0e0e0e;
                 font-family: 'Roboto', sans-serif;
+                font-weight: 300;
                 border: #c3cde0;
                 border-radius: 10px;
             }
@@ -42,6 +43,7 @@
             text-align: center;
             font-size: 30px;
             font-family: 'Roboto', sans-serif;
+            font-weight: 300;
         }
 
         .text1 {
@@ -51,6 +53,7 @@
             width: 100%;
             display: block;
             font-family: 'Roboto', sans-serif;
+            font-weight: 300;
         }
     </style>
     {#    </div>#}
@@ -64,14 +67,14 @@
                 {#					<img id="image-mail" src="../img/message.png">#}
                 <a>
                     <p id="mail"
-                       style="font-family: 'Roboto', sans-serif; float: right;">
+                       style="font-family: 'Roboto', sans-serif; float: right; font-weight: 300;">
                         Email: geospheres@idg.chph.ras.ru
                     </p>
                     <br>
                 </a>
                 {#					<img id="image-phone" src="../img/phone.png">#}
                 <a>
-                    <p style="font-family: 'Roboto', sans-serif; float: right;">
+                    <p style="font-family: 'Roboto', sans-serif; float: right; font-weight: 300;">
                         Phone number: 8 (499) 137-66-11
                     </p>
                     <br>
@@ -79,7 +82,7 @@
                 {#            </div>#}
                 <a href="mailto:geospheres@idg.chph.ras.ru">
                     <div id="contact_us">
-                        <p style="font-family: 'Roboto', sans-serif; float: right;">
+                        <p style="font-family: 'Roboto', sans-serif; float: right; font-weight: 300;">
                             CONTACTS US</p>
                     </div>
                 </a>
