--- a/templates/equipment.html
+++ b/templates/equipment.html
@@ -8,8 +8,8 @@
 {% block content %}
     <div class="container px-4 py-5" id="main-contents">
         <h2 class="pb-2 border-bottom"
-            style="font-family: 'Roboto', sans-serif; font-size: 30px;">Median TEC</h2>
-        <p style="font-family: 'Roboto', sans-serif;">To calculate the variations
+            style="font-family: 'Roboto', sans-serif; font-size: 30px; font-weight: 300;">Median TEC</h2>
+        <p style="font-family: 'Roboto', sans-serif; font-weight: 300;">To calculate the variations
             of TEC value on one day we used the data of the Madrigal system
             capable
             of managing and serving archival and real-time data from a wide range
@@ -45,9 +45,9 @@
     </div>
     <div class="container px-4 py-5" id="main-contents">
         <h2 class="pb-2 border-bottom"
-            style="font-family: 'Roboto', sans-serif; font-size: 30px;">VLF Signals</h2>
+            style="font-family: 'Roboto', sans-serif; font-size: 30px; font-weight: 300;">VLF Signals</h2>
         {#        <hr>#}
-        <p style="font-family: 'Roboto', sans-serif;">The high sensitive
+        <p style="font-family: 'Roboto', sans-serif; font-weight: 300;">The high sensitive
             magnetometric systems "Whistler" are installed in Mikhnevo Geophysical
             Observatory. They allow to register signals from VLF stations located
             around the globe. The site
@@ -65,6 +65,7 @@
                 height: 45px;
                 color: #ffffff;
                 font-size: 18px;
+                font-weight: 300;
                 font-family: 'Roboto', sans-serif;
                 border: #68819a;
                 border-radius: 4px;
@@ -90,8 +91,8 @@
     </div>
     <div class="container px-4 py-5" id="main-contents">
         <h2 class="pb-2 border-bottom"
-            style="font-family: 'Roboto', sans-serif; font-size: 30px;">GNSS</h2>
-        <p style="font-family: 'Roboto', sans-serif;">The Observatory complex for
+            style="font-family: 'Roboto', sans-serif; font-size: 30px; font-weight: 300;">GNSS</h2>
+        <p style="font-family: 'Roboto', sans-serif; font-weight: 300;">The Observatory complex for
             measurement of the ionosphere parameters includes three GNSS
             receivers:<br>
             <br>- Javad Sigma
@@ -131,9 +132,9 @@
             <div class="column">
                 {#        <div class="col-md-4">#}
                 {#            <div class="box">#}
-                <h2 style="font-family: 'Roboto', sans-serif;">Javad Sigma</h2>
+                <h2 style="font-family: 'Roboto', sans-serif; font-weight: 300;">Javad Sigma</h2>
                 <hr>
-                <p style="font-family: 'Roboto', sans-serif;">latitude: 54°57´<br>
+                <p style="font-family: 'Roboto', sans-serif; font-weight: 300;">latitude: 54°57´<br>
                     longitude: 37°46´<br><br>
                     - GPS L1/L2/L5<br>
                     - GLONASS L1/L2<br>
@@ -149,9 +150,9 @@
             <div class="column">
                 {#        <div class="col-md-4">#}
                 {#            <div class="box">#}
-                <h2 style="font-family: 'Roboto', sans-serif;">Javad Prego</h2>
+                <h2 style="font-family: 'Roboto', sans-serif; font-weight: 300;">Javad Prego</h2>
                 <hr>
-                <p style="font-family: 'Roboto', sans-serif;">latitude: 54°57´<br>
+                <p style="font-family: 'Roboto', sans-serif; font-weight: 300;">latitude: 54°57´<br>
                     longitude: 37°46´<br><br>
                     - GPS L1/L2/L5<br>
                     - 1 Hz update rate
@@ -165,9 +166,9 @@
             {#        <div class="col-md-4">#}
             {#            <div class="box">#}
             <div class="column">
-                <h2 style="font-family: 'Roboto', sans-serif;">Trimble 5700</h2>
+                <h2 style="font-family: 'Roboto', sans-serif; font-weight: 300;">Trimble 5700</h2>
                 <hr>
-                <p style="font-family: 'Roboto', sans-serif;">latitude: 54°57´<br>
+                <p style="font-family: 'Roboto', sans-serif; font-weight: 300;">latitude: 54°57´<br>
                     longitude: 37°46´<br><br>
                     - GPS L1/L2/L5<br>
                     - 1 Hz update rate
