--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -100,9 +100,15 @@
                 width: 160px;
                 color: white;
                 font-family: 'Roboto', sans-serif;
+                font-weight: 300;
                 border: #68819a;
                 border-radius: 8px;
                 min-height: 40px;
+            }
+
+            .btn_up:hover {
+                background: #576f88;
+                color: #f8f6f6;
             }
 
 
@@ -135,20 +141,20 @@
 {#                <div class="three-inline-buttons">#}
 {#                <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">#}
 {#                        <div class="col d-flex" style="justify-content: center; align-items: center">#}
-                            <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: right; font-family: 'Roboto', sans-serif;" value="Previous day" onclick="previous()">
+                            <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: right;" value="Previous day" onclick="previous()">
                 </td>
                 <td class="child" style="text-align: center;">
-                    <input class="btn_up" type="submit" formaction="/date-selection" style="text-align:center; font-family: 'Roboto', sans-serif;" value="Calendar">
+                    <input class="btn_up" type="submit" formaction="/date-selection" style="text-align:center;" value="Calendar">
                 </td>
 {#                    </form>#}
                 <td class="child">
-                    <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: left; font-family: 'Roboto', sans-serif;" value="Next day" onclick="next()">
+                    <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: left;" value="Next day" onclick="next()">
                 </td>
             </table>
                                 <input type="hidden" id="source" name="source" value="{{ source }}">
 
 {#                </div>#}
-                <span style="align-items: center; font-size: 25px; justify-content: center; margin: auto; display: flex;" id="nodata">
+                <span style="font-family: Roboto, sans-serif; font-weight: 300; align-items: center; font-size: 25px; justify-content: center; margin: auto; display: flex;" id="nodata">
                     <br><br>
                     NO DATA FOR {{ current_day }}/{{ current_month }}/{{ current_year }}
                 </span>
@@ -217,6 +223,7 @@
                     </div>
                 {% endfor %}
             </picture>
+            <br>
 {#            </a>#}
         {% endif %}
     </div>
