--- a/templates/data.html
+++ b/templates/data.html
@@ -23,11 +23,18 @@
             line-height: 1.5;
             letter-spacing: .2px;
             font-size: 18px;
+            font-weight: 300;
         }
 
         h1 {
             font-size: 30px;
+            font-weight: 300;
             text-align: justify;
+        }
+
+        h2 {
+            font-weight: 300;
+            font-family: Roboto, sans-serif;
         }
 
         .box-container {
@@ -40,6 +47,7 @@
             display: flex;
             text-align: justify;
             font-family: 'Roboto', sans-serif;
+            font-weight: 300;
             position: relative;
             justify-content: space-between;
         }
@@ -48,6 +56,7 @@
             flex: 0;
             padding: 0;
             font-family: 'Roboto', sans-serif;
+            font-weight: 300;
             color: #888484;
             margin: auto;
             display: block;
@@ -67,6 +76,7 @@
           width: 150px;
           padding: 30px 40px;
           font-family: 'Roboto', sans-serif;
+          font-weight: 300;
         }
 
         .box1-side {
@@ -77,6 +87,7 @@
             justify-content: center;
             align-items: center;
             font-family: 'Roboto', sans-serif;
+            font-weight: 300;
             position: relative;
         }
 
@@ -88,6 +99,7 @@
             height: 60px;
             color: #ffffff;
             font-size: 50px;
+            font-weight: 300;
             font-family: 'Roboto', sans-serif;
             border: #68819a;
             border-radius: 8px;
@@ -138,6 +150,7 @@
 
             ul {
                 font-size: 16px;
+                font-weight: 300;
                 margin-left: 5%;
             }
 
@@ -153,6 +166,7 @@
                 height: 50px;
                 color: #ffffff;
                 font-family: 'Roboto', sans-serif;
+                font-weight: 300;
                 border: #68819a;
                 border-radius: 8px;
                 margin: auto;
@@ -172,6 +186,7 @@
                 vertical-align: center;
                 color: #ffffff;
                 font-size:2vw;
+                font-weight: 300;
             }
 </style>
     <div class="box-container">
