--- a/templates/index.html
+++ b/templates/index.html
@@ -380,7 +380,7 @@
             </div>
         </div>
         <footer class="footer pt-3 mt-4 text-muted border-top"
-                style="font-family: 'Roboto', sans-serif;">
+                style="font-family: 'Roboto', sans-serif; font-weight: 300">
             © IDG RAS
             <br>
             Institute of geosphere dynamics of Russian academy of sciences
