--- a/templates/base_page.html
+++ b/templates/base_page.html
@@ -35,6 +35,139 @@
                 box-sizing: border-box;
             }
 
+            /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+            #main {
+                transition: margin-left 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+                padding: 20px;
+                width: 100%;
+            }
+
+            .ham-icon {
+                vertical-align: middle;
+                justify-content: center;
+                height: 30px;
+                width: 30px;
+                padding: 0;
+                {#width: 10%;#}
+                {#height: 10%;#}
+            }
+
+            #navbar {
+              overflow: hidden;
+              background-color: #68819a;
+              font-family: 'Roboto', sans-serif;
+              padding: 25px 10px;
+              vertical-align: middle;
+              {#transition: 0.4s;#}
+              {#position: fixed;#}
+              width: 100%;
+              height: 80px;
+              top: 0;
+              {#z-index: 99;#}
+            }
+
+            #navbar a {
+              {#float: left;#}
+              color: White;
+              text-align: center;
+              {#padding: 12px;#}
+              margin-left: 12px;
+              margin-right: 18px;
+              text-decoration: none;
+              font-weight: 300;
+              font-family: 'Roboto', sans-serif;
+              font-size: 20px;
+              line-height: 25px;
+              border-radius: 4px;
+              transition: 0.4s;
+              justify-content: center;
+              align-items: center;
+            }
+
+            #navbar #logo {
+              font-size: 30px;
+              margin: 10px;
+              vertical-align: middle;
+              {#font-weight: bold;#}
+              {#transition: 0.4s;#}
+              min-width: 500px;
+
+            }
+
+            #navbar #logo:hover {
+              color: White;
+            }
+
+            #navbar a:hover {
+              background-color: #68819a;
+              color: #b2a9a9;
+              margin-left: 12px;
+            }
+
+            #navbar-right {
+              float: right;
+              height: 35px;
+              font-size: 20px;
+              transition: 0.4s;
+              {#margin-right: 22px;#}
+              {#margin-left: 22px;#}
+            }
+
+            .ham-icon {
+                vertical-align: middle;
+                justify-content: center;
+                align-items: center;
+                height: 30px;
+                width: 30px;
+                padding: 0;
+                margin-right: 16px;
+                }
+
+            @media screen and (max-width: 980px) {
+                #navbar {
+                  overflow: hidden;
+                  background-color: #68819a;
+                  font-family: 'Roboto', sans-serif;
+                  padding: 25px 10px;
+                  vertical-align: middle;
+                  {#transition: 0.4s;#}
+                  {#position: fixed;#}
+                  width: 100%;
+                  height: 80px;
+                  top: 0;
+                  {#z-index: 99;#}
+                }
+                #navbar #logo {
+                {#font-size: 30px;#}{#transition: 0.4s;#}
+                    text-align: center;
+                {#float: right;#}
+                    align-items: center;
+                    justify-content: center;
+                    {#margin: 12px;#}
+                {#min-width: 550px;#}
+                }
+
+                #navbar a {
+                  {#float: none;#}
+                  color: White;
+                  text-align: center;
+                  {#padding: 12px;#}
+                  margin-left: 12px;
+                  text-decoration: none;
+                  font-family: 'Roboto', sans-serif;
+                  font-size: 20px;
+                  line-height: 25px;
+                  border-radius: 4px;
+                  transition: 0.4s;
+                  justify-content: center;
+                  align-items: center;
+                }
+
+                #navbar-right {
+                {#float: none;#} display: none;
+                }
+            }
+
             .sidenav {
                 height: 100%;
                 width: 0;
@@ -43,15 +176,19 @@
                 top: 0;
                 left: 0;
                 background-color: #68819a;
+                {#background-color: #5a728a;#}
                 overflow-x: hidden;
                 padding-top: 4rem;
                 transition: 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
             }
 
             .sidenav a {
                 padding: 0.5rem 1rem;
                 text-decoration: none;
                 color: #f8f6f6;
+                font-family: 'Roboto', sans-serif;
                 display: block;
                 transition: 0.4s;
                 white-space: nowrap;
@@ -61,6 +198,7 @@
             .sidenav a:hover {
                 color: #b2a9a9;
                 background: #68819a;
+                {#background-color: #5a728a;#}
             }
 
             /* Position and style the close button (top right corner) */
@@ -76,36 +214,12 @@
                 transform: scale(1.2);
             }
 
-            /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-            #main {
-                transition: margin-left 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-                padding: 20px;
-                width: 100%;
-            }
-
-            /* Add a black background color to the top navigation */
-            .topnav {
-            {#background-color: #316e8d;#} background-color: #68819a;
-                overflow: hidden;
-                vertical-align: center;
-                {#align-content: center;#}
-                align-items: center;
-            }
-
             /* Style the links inside the navigation bar */
             .topnav a {
                 float: left;
                 display: block;
                 padding: 1rem;
                 text-decoration: none;
-            }
-
-            .header_1 {
-                margin: auto;
-                width: 80%;
-                display: inline-flex;
-                align-items: center;
-                justify-content: center;
             }
 
             /* Change the color of links on hover */
@@ -118,6 +232,7 @@
             @media screen and (max-height: 480px) {
                 .sidenav {
                     padding-top: 3rem;
+
                 }
 
                 .sidenav a {
@@ -134,60 +249,66 @@
             }
 
             section h1 {
-                font-family: "Bebas Neue";
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
                 font-size: 4rem;
             }
 
             section p {
-                font-family: "Lato";
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
                 line-height: 1.8;
                 font-size: 1.5rem;
             }
 
-            .ham-icon {
-                vertical-align: middle;
-                justify-content: center;
-                width: 10%;
-                height: 10%;
+            .topnav a1 {
+              float: right;
+              color: #f2f2f2;
+              text-align: center;
+              padding: 14px 16px;
+              text-decoration: none;
+              font-size: 17px;
+            }
+
+            .topnav a1:hover {
+              color: #b2a9a9;
             }
         </style>
         <div class="wrapper_base">
+            <div id="navbar">
+                <a href="#" class="ham-icon" {# style="align-items: center;" #}>
+                    <svg width="30" height="30">
+                        <path d="M0,5 30,5" stroke="#ffffff" stroke-width="5"></path>
+                        <path d="M0,14 30,14" stroke="#ffffff" stroke-width="5"></path>
+                        <path d="M0,23 30,23" stroke="#ffffff" stroke-width="5"></path>
+                    </svg>
+                </a>
+
+              <a href="/" id="logo">Geophysical Observatory Mikhnevo</a>
+              <div id="navbar-right">
+                <a href="/data" style="font-family: 'Roboto', sans-serif; font-weight: 300;">Data</a>
+                <a href="/equipment" style="font-family: 'Roboto', sans-serif; font-weight: 300;">Equipment</a>
+                <a href="/contacts" style="font-family: 'Roboto', sans-serif; font-weight: 300;">Contacts</a>
+              </div>
+            </div>
             <div id="sideNavigation" class="sidenav">
                 <a href="#" class="close-btn">&times;</a>
-                <a href="/data" style="font-family: 'Roboto', sans-serif;">Data</a>
-        {#        <a href="/date-selection" style="font-family: 'Roboto', sans-serif;">VLF</a>#}
-                <a href="/equipment" style="font-family: 'Roboto', sans-serif;">Equipment</a>
-                <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
+                <a href="/data" style="font-family: 'Roboto', sans-serif; font-weight: 300;">Data</a>
+                <a href="/equipment" style="font-family: 'Roboto', sans-serif; font-weight: 300;">Equipment</a>
+                <a href="/contacts" style="font-family: 'Roboto', sans-serif; font-weight: 300;">Contacts</a>
             </div>
-            <nav class="topnav">
-                <header class="header">
-                    <div class="fs-1">
-                        <a href="#" class="ham-icon" style="align-items: center;">
-                            <svg width="30" height="30">
-                                <path d="M0,5 30,5" stroke="#ffffff" stroke-width="5"></path>
-                                <path d="M0,14 30,14" stroke="#ffffff" stroke-width="5"></path>
-                                <path d="M0,23 30,23" stroke="#ffffff" stroke-width="5"></path>
-                            </svg>
-                        </a>
-                        <a href="/" class="header_1" style="text-align: center">
-                            {#                  <img src="{% static 'fav-planet.png' %}" width=7% height=7%>#}
-                            <span style="font-family: 'Roboto', sans-serif; display: inline-flex; align-items: center; justify-content: center; color: #ffffff; margin: 0 auto; font-size: 30px;">Geophysical Observatory Mikhnevo</span>
-                            {#              font-size: 3vw;#}
-                        </a>
-                    </div>
-                </header>
                 <script>
-                    document.querySelector("a.ham-icon").addEventListener("click", function (event) {
-                        document.getElementById("sideNavigation").style.width = "250px";
-                        document.getElementById("main").style.marginLeft = "250px";
-                    });
+                document.querySelector("a.ham-icon").addEventListener("click", function (event) {
+                    document.getElementById("sideNavigation").style.width = "250px";
+                    document.getElementById("main").style.marginLeft = "250px";
+                });
 
-                    document.querySelector("a.close-btn").addEventListener("click", function (event) {
-                        document.getElementById("sideNavigation").style.width = "0";
-                        document.getElementById("main").style.marginLeft = "0";
-                    });
-                </script>
-            </nav>
+                document.querySelector("a.close-btn").addEventListener("click", function (event) {
+                    document.getElementById("sideNavigation").style.width = "0";
+                    document.getElementById("main").style.marginLeft = "0";
+                });
+            </script>
+{#            </nav>#}
             <br>
             {% block content %}{% endblock %}
 
@@ -198,6 +319,7 @@
                     bottom: 0;
                     left: 0;
                     font-family: 'Roboto', sans-serif;
+                    font-weight: 300;
                     border-top: 1px solid #9d9b9b;
                 }
             </style>
