--- a/templates/gps.html
+++ b/templates/gps.html
@@ -7,7 +7,7 @@
 {% load static %}
 
 {% block content %}
-    <div class="container px-4 py-5" id="main-contents">
+    <div class="fw-bold">
         <style>
             .btn {
                 float: left;
@@ -17,6 +17,7 @@
                 width: 200px;
                 color: white;
                 font-family: 'Roboto', sans-serif;
+                font-weight: 300;
                 border: #68819a;
                 border-radius: 8px;
             }
@@ -25,13 +26,66 @@
                 background: #5c748c;
                 color: #f8f8f8;
             }
+
+            .btn_up {
+                display: inline-block;
+                background: #68819a;
+                font-size: 20px;
+                width: 160px;
+                color: white;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
+                border: #68819a;
+                border-radius: 8px;
+                min-height: 40px;
+            }
+
+            .btn_up:hover {
+                background: #576f88;
+                color: #f8f6f6;
+            }
+
+
+            .center {
+                max-width: 1000px;
+                align-content: center;
+                margin-left: auto;
+                margin-right: auto;
+                {#width: 100%; /* Try setting this to 400px or something */#}
+                {#display: table;#}
+            }
+            .child {
+                {#display: table-cell;#}
+                align-content: center;
+                width: 33%;
+                padding: 0 15px;
+            }
+            .child:first-child .childinner {
+                margin-left: 0;
+            }
         </style>
         <form method="post" id="date_form">
 {#        <a href="/date-selection" class="btn">Back to date picker</a>#}
-            <input class="btn" type="submit" formaction="/date-selection" value="Back to date picker">
-            <input type="hidden" id="source" name="source" value="{{ source }}">
+
+            <table class="center">
+                <td class="child">
+{#                <div class="three-inline-buttons">#}
+{#                <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">#}
+{#                        <div class="col d-flex" style="justify-content: center; align-items: center">#}
+                    <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: right;" value="Previous day" onclick="previous()">
+                </td>
+                <td class="child" style="text-align: center;">
+                    <input class="btn_up" type="submit" formaction="/date-selection" style="text-align:center;" value="Calendar">
+                </td>
+{#                    </form>#}
+                <td class="child">
+                    <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: left;" value="Next day" onclick="next()">
+                </td>
+            </table>
+{#            <input class="btn" type="submit" formaction="/date-selection" value="Back to date picker">#}
+{#            <input type="hidden" id="source" name="source" value="{{ source }}">#}
         </form>
-        <a href="/" class="btn" style="float: right;">Home Page</a>
+{#        <a href="/" class="btn" style="float: right;">Home Page</a>#}
     </div>
     <style>
         .new1 div {
